--- a/html/Ex1.html
+++ b/html/Ex1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	<link rel="stylesheet" href="..\css\Ex1.css">
+  <head>	
+    <link rel="stylesheet" href="..\css\Ex1.css">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Happy Cat Cafe</title>
   </head>
   
